<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Calculator</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="sqrt">√</string>
    <string name="inv">1/x</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">×</string>
    <string name="divide">/</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
    <string name="mc">MC</string>
    <string name="ms">MS</string>
    <string name="mr">MR</string>
    <string name="m_add">M+</string>
    <string name="m_sub">M-</string>
    <string name="backspace">←</string>
    <string name="toggle_sign">±</string>
    <string name="clear">C</string>
    <string name="prompt">Вводите выражение</string>
</resources>