<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="8dp"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:columnCount="5"
    android:shrinkColumns="*"
    tools:context=".MainActivity">

    <TableRow>
        <TextView
            android:id="@+id/output_textBlock"
            android:layout_gravity="end"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_span="5"
            android:scrollHorizontally="true"
            android:textAlignment="textEnd" />
    </TableRow>

    <TableRow>
        <EditText
            android:id="@+id/input_textBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_span="5"
            android:autofillHints=""
            android:ems="100"
            android:hint="@string/prompt"
            android:inputType="numberSigned"
            android:text="@string/zero"
            android:textAlignment="textEnd"
            android:textSize="24pt" />
    </TableRow>

    <TableRow>
        <Button
            android:id="@+id/mc_btn"
            android:layout_margin="4dp"
            android:background="#ffaaaaaa"
            android:text="@string/mc" />

        <Button
            android:id="@+id/mr_btn"
            android:layout_margin="4dp"
            android:background="#ffaaaaaa"
            android:text="@string/mr" />

        <Button
            android:id="@+id/ms_btn"
            android:layout_margin="4dp"
            android:background="#ffaaaaaa"
            android:text="@string/ms" />

        <Button
            android:id="@+id/m_add_btn"
            android:layout_margin="4dp"
            android:background="#ffaaaaaa"
            android:text="@string/m_add" />

        <Button
            android:id="@+id/m_sub_btn"
            android:layout_margin="4dp"
            android:background="#ffaaaaaa"
            android:text="@string/m_sub" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/backspace_btn"
            android:layout_margin="4dp"
            android:layout_span="2"
            android:background="#ffaaaaaa"
            android:text="@string/backspace"
            android:typeface="serif" />

        <Button
            android:id="@+id/toggle_sign_btn"
            android:layout_margin="4dp"
            android:background="#ffaaaaaa"
            android:text="@string/toggle_sign" />

        <Button
            android:id="@+id/clear_btn"
            android:layout_margin="4dp"
            android:layout_span="2"
            android:background="#ff6666ee"
            android:text="@string/clear" />
    </TableRow>

    <TableRow>
        <Button
            android:id="@+id/seven_btn"
            android:layout_margin="4dp"
            android:background="#ffdddddd"
            android:text="@string/seven" />

        <Button
            android:id="@+id/eight_btn"
            android:layout_margin="4dp"
            android:background="#ffdddddd"
            android:text="@string/eight" />

        <Button
            android:id="@+id/nine_btn"
            android:layout_margin="4dp"
            android:background="#ffdddddd"
            android:text="@string/nine" />

        <Button
            android:id="@+id/sqrt_btn"
            android:layout_margin="4dp"
            android:background="#ffaaaaaa"
            android:text="@string/sqrt" />

        <Button
            android:id="@+id/inv_btn"
            android:layout_margin="4dp"
            android:background="#ffaaaaaa"
            android:text="@string/inv" />
    </TableRow>

    <TableRow>
        <Button
            android:id="@+id/four_btn"
            android:layout_margin="4dp"
            android:background="#ffdddddd"
            android:text="@string/four" />

        <Button
            android:id="@+id/five_btn"
            android:layout_margin="4dp"
            android:background="#ffdddddd"
            android:text="@string/five" />

        <Button
            android:id="@+id/six_btn"
            android:layout_margin="4dp"
            android:background="#ffdddddd"
            android:text="@string/six" />

        <Button
            android:id="@+id/add_btn"
            android:layout_margin="4dp"
            android:background="#ffaaaaaa"
            android:text="@string/add" />

        <Button
            android:id="@+id/multiply_btn"
            android:layout_margin="4dp"
            android:background="#ffaaaaaa"
            android:text="@string/multiply" />
    </TableRow>

    <TableRow>
        <Button
            android:id="@+id/one_btn"
            android:layout_margin="4dp"
            android:background="#ffdddddd"
            android:text="@string/one" />

        <Button
            android:id="@+id/two_btn"
            android:layout_margin="4dp"
            android:background="#ffdddddd"
            android:text="@string/two" />

        <Button
            android:id="@+id/three_btn"
            android:layout_margin="4dp"
            android:background="#ffdddddd"
            android:text="@string/three" />

        <Button
            android:id="@+id/subtract_btn"
            android:layout_margin="4dp"
            android:background="#ffaaaaaa"
            android:text="@string/subtract" />

        <Button
            android:id="@+id/divide_btn"
            android:layout_margin="4dp"
            android:background="#ffaaaaaa"
            android:text="@string/divide" />
    </TableRow>

    <TableRow>
        <Button
            android:id="@+id/zero_btn"
            android:layout_margin="4dp"
            android:layout_span="2"
            android:background="#ffdddddd"
            android:text="@string/zero" />

        <Button
            android:id="@+id/dot_btn"
            android:layout_margin="4dp"
            android:background="#ffaaaaaa"
            android:text="@string/dot" />

        <Button
            android:id="@+id/equals_btn"
            android:layout_margin="4dp"
            android:layout_span="2"
            android:background="#ff22aa22"
            android:text="@string/equals" />
    </TableRow>
</TableLayout>